Pad the trophy panel out to a full page to avoid annoying stretching.

--- a/pages/css/game.css
+++ b/pages/css/game.css
@@ -144,6 +144,7 @@
 .trophyDetail .Image {
   text-align: left;
   width: 65px;
+  height: 60px;
 }
 
 .trophyDetail .Name {
